# ros2_sim_robot

./: README.md
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: my_robot_gazebo.launch.py  my_robot_gazebo.launch.xml
my_robot_bringup/rviz/: urdf_config.rviz
my_robot_bringup/worlds/: test_world.world
my_robot_control/: CMakeLists.txt  README.md  package.xml
my_robot_control/launch/: control.launch.py
my_robot_control/src/: control_switch_node.cpp
my_robot_description/: package.xml
my_robot_description/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_robot_description/install/my_robot_description/share/my_robot_description/: local_setup.sh  package.sh
my_robot_description/install/my_robot_description/share/my_robot_description/rviz/: urdf_config.rviz
my_robot_description/install/my_robot_description/share/my_robot_description/urdf/: mobile_base.xacro
my_robot_description/launch/: display.launch.xml
my_robot_description/log/: latest_build
my_robot_description/urdf/: arm.xacro  arm_gazebo.xacro  camera.xacro  common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf  my_robot.urdf.xacro
